// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unknown plugin nested: nested 1`] = `

import { castella, css, html, slot } from '../../macro'

const A = castella(
  css\`
    display: flex;

    .left {
      flex: 100px 0 0;

      font-size: \${size}
    }

    & > .right {
      flex: auto 1 0;
    }
  \`,
  html\`
    <div>\${slot()}</div>
  \`
);

      ↓ ↓ ↓ ↓ ↓ ↓

import { component as _component } from "@castella/runtime";

const A = _component({
  html: \`<style>:host{display:flex;}.left{flex:100px 0 0;font-size:\${size};}:host>.right{flex:auto 1 0;}</style><div><slot></slot></div>\`,
});


`;

exports[`unknown plugin placeholders: placeholders 1`] = `

import { castella, css, html, slot } from '../../macro'

const A = castella(
  css\`
    display: flex;

    margin: calc(1em + \${"3px"});
    color: \${color};
  \`,
  html\`
    <div>\${slot()}</div>
  \`
);

      ↓ ↓ ↓ ↓ ↓ ↓

import { component as _component } from "@castella/runtime";

const A = _component({
  html: \`<style>:host{display:flex;margin:calc(1em + 3px);color:\${color};}</style><div><slot></slot></div>\`,
});


`;
